--- a/Assignments/a3/skeleton/a3.cabal
+++ b/Assignments/a3/skeleton/a3.cabal
@@ -4,12 +4,12 @@ version:            0.1.0.0
 -- synopsis:
 -- description:
 license:            BSD-3-Clause
-license-file:       LICENSE
+-- license-file:       LICENSE
 author:             Reed Mullanix
 maintainer:         reedmullanix@gmail.com
 -- copyright:
 build-type:         Simple
-extra-doc-files:    CHANGELOG.md
+-- extra-doc-files:    CHANGELOG.md
 -- extra-source-files:
 
 common warnings
